fixed some things on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -155,13 +155,10 @@ main {
 .conversation .mode-selector {
     display: none;
     max-width: 48rem;
+    /*box-sizing: border-box;*/
+    padding: 0 2rem;
     margin: 0 auto 12px auto;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    overflow: hidden;
+    /*font-size: 30px;*/
 }
 
 .conversation #conversation-content:empty + .mode-selector {
